fix overflow bug

--- a/app/assets/stylesheets/pages/_home.css.scss
+++ b/app/assets/stylesheets/pages/_home.css.scss
@@ -79,6 +79,7 @@
 	}
 	.how-it-works{
 		background-color:$darkerBlue;
+		overflow-x:hidden;
 	}
 	.try{
 		background:white;
